common-applications/freesky-icsl-hk-cluster/cloudsca/web/deployment.yaml
# Deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sca-web
  namespace: sca
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: sca-web
  template:
    metadata:
      labels:
        app: sca-web
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: sca-web
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/icsl/sca-web:9339970f803c6fb126b6c30f358020372c7bacf9
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8015
        resources:
          requests:
            cpu: 300m
            memory: 500Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
